tests/golden/error/type_mismatch_hints.tg
// Golden test: type mismatch with diagnostic hints (ADR 21.4.26h)
fn main() -> Nat {
    42 + "hello"
}
